<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_intro"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_seightseeing"
            android:icon="@drawable/museums_arts"
            android:title="@string/museums_kust" />
        <item
            android:id="@+id/nav_seightseeing1"
            android:icon="@drawable/seightseeing"
            android:title="@string/seightseeing" />

        <item
            android:id="@+id/nav_seightseeing2"
            android:icon="@drawable/food_n_drinks"
            android:title="@string/food_drinks" />
        <item
            android:id="@+id/nav_seightseeing3"
            android:icon="@drawable/berlinale"
            android:title="@string/berlinale" />
    </group>

    <item android:title="Itinerary">
        <menu>
            <item
                android:id="@+id/calendar"
                android:icon="@drawable/calendar"
                android:title="Save to calendar"/>
            <item
                android:id="@+id/maps"
                android:icon="@drawable/map"
                android:title="Open directions"/>
            <item
                android:id="@+id/share"
                android:icon="@drawable/share"
                android:title="Share"/>
        </menu>
    </item>

</menu>