<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/d16dp"
    android:layout_marginTop="@dimen/d16dp"
    android:foreground="@color/cardview_shadow_end_color"
    app:cardCornerRadius="-1dp"
    app:cardElevation="@dimen/d10dp"
    app:cardPreventCornerOverlap="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailCard"
    tools:showIn="@layout/app_bar_main">

    <RelativeLayout
        android:id="@+id/detail_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/d8dp"
        android:paddingVertical="@dimen/d4dp">

        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/d0dp"
            android:layout_marginTop="@dimen/d0dp"
            android:padding="@dimen/d0dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/seightseeing" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_image">

            <TextView
                android:id="@+id/detail_name"
                style="@style/txt_cardview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/d27dp"
                android:gravity="top"
                android:textColor="@color/font"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="Name" />

            <TextView
                android:id="@+id/website"
                style="@style/txt_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_name"
                android:autoLink="web"
                android:linksClickable="true"
                android:textSize="12sp"
                tools:text="www.something" />

            <TextView
                android:id="@+id/address"
                style="@style/txt_cardview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/website"
                android:maxLines="2"
                android:textSize="@dimen/d12sp"
                tools:text="Somewhere in Berlin" />

            <TextView
                android:id="@+id/fees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/detail_name"
                android:layout_below="@+id/address"
                android:paddingBottom="@dimen/d2dp"
                android:paddingTop="@dimen/d1dp"
                android:textColor="@color/font"
                android:textSize="12sp"
                tools:text="@string/mk_1_fee" />

            <TextView
                android:id="@+id/hours_bold"
                style="@style/txt_cardview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fees"
                android:text="@string/hours"
                android:textSize="@dimen/d12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hours"
                android:layout_width="327dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/fees"
                android:layout_toLeftOf="@id/hours_bold"
                android:paddingBottom="@dimen/d2dp"
                android:paddingTop="@dimen/d2dp"
                android:textColor="@color/font"
                android:textSize="12sp"
                tools:text="hours" />

            <TextView
                android:id="@+id/detail_description"
                style="@style/txt_cardview"
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:layout_alignParentBottom="true"
                android:text="@string/berlinale_intro"
                android:textSize="@dimen/d15sp" />
        </RelativeLayout>

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/d4dp"
        android:layout_marginTop="@dimen/d56dp"
        android:background="@android:color/transparent"
        android:padding="@dimen/d4dp"
        android:scrollbars="vertical" />

</android.support.v7.widget.CardView>